<resources>
    <string name="app_name">Resep Jajanan Kekinian</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun_daftar_disini">Belum Punya Akun? Daftar Disini</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="title_activity_login">login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="populer">Populer Minggu Ini</string>
    <string name="populer_minggu_ini">Populer Minggu Ini</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="oreo_cheesecake">Oreo Cheesecake</string>
    <string name="pencarian_terakhirmu">Pencarian Terakhirmu</string>

    <!--    Resep-->
    <string name="judulresep">Oreo Cheesecake</string>
    <string name="viewerresep">2200</string>
    <string name="savedresep">5</string>
    <string name="commentresep">20</string>
    <string name="almond">Almond</string>
    <string name="favorit">Favorit</string>
    <string name="dilihat">Dilihat</string>
    <string name="diskusi">Diskusi</string>
    <string name="mulai_memasak">Mulai Memasak</string>
    <string name="step_resep_1">Tumbuk oreo bagian hitamnya hingga hancur dan cukup halus.</string>
    <string name="temukan_resep_makanan_berdasarkan_bahan_yang_kamu_punya">Temukan resep makanan berdasarkan bahan yang kamu punya</string>
    <string name="kulkas">KULKAS</string>
    <string name="_2200">2200</string>
    <string name="keluar">Keluar</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="saya_senang_jika_menerima_informasi_dari_aplikasi_ini_seperti_promosi_dan_kabar_melalui_email">Saya senang jika menerima informasi dari aplikasi ini seperti promosi dan kabar melalui email</string>
    <string name="sudah_punya_akun">Sudah Punya Akun? </string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Masukan email yang valid</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="ageerror">Enter a valid age</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>