<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".daftar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/varela_round"
            android:text="@string/daftar"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/daftarNama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="RtlSymmetry"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/daftarEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daftarNama"
            tools:ignore="RtlSymmetry,TextFields"
            android:importantForAutofill="no" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daftarEmail">
            <EditText
                android:id="@+id/daftarPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="30dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daftarEmail"
                tools:ignore="RtlSymmetry"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonDaftar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:text="@string/daftar_sekarang"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            app:layout_constraintVertical_bias="0.0" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textViewPunyaAkun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/varela_round"
                android:text="@string/sudah_punya_akun"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/varela_round"
                android:text="@string/masuk_disini"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_weight="1"
                android:textStyle="bold"
                />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>