<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSearchResep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="10dp"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/imageViewSearchResep"
                    android:cropToPadding="false"
                    android:src="@drawable/oreocheesecake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/populer">
                </ImageView>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewNamaResepSearchResep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:text="@string/oreo_cheesecake"
                    android:layout_gravity="center">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_gravity = "center"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/show"
                            android:contentDescription="@string/dilihat"
                            app:tint="@color/colorAccent"/>

                        <TextView
                            android:id="@+id/dilihatSearchResep"
                            android:layout_width="68dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:text="@string/_2200"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_gravity = "center"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            app:srcCompat="@drawable/like3"
                            android:contentDescription="@string/favorit"
                            app:tint="@color/colorAccent"/>

                        <TextView
                            android:id="@+id/favoritSearchResep"
                            android:layout_width="68dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:text="@string/_2200"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>